If an RPC fails, try a shorter reply in case the fault lies with the size of the response.

PR: misc/26320
MFC After: 2 weeks